# human-like

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  cdp_type.py  pyproject.toml
sounds/default/: theme.json
sounds/tofu-tkl-boba-u4t-pbs-ap1/: theme.json
src/human_like/: __init__.py  cli.py  sound.py  tmux.py  typer.py
tests/: test_sound.py  test_sound_integration.py  test_tmux.py  test_tmux_integration.py  test_typer.py
